--- a/src/layout/style.css
+++ b/src/layout/style.css
@@ -129,6 +129,7 @@ div#content div.editor textarea {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	resize: vertical;
 }
 
 div#content div.editor textarea.badjson {
