--- a/src/layout/examples/06_f_06.mtas_termvector.html
+++ b/src/layout/examples/06_f_06.mtas_termvector.html
@@ -198,6 +198,7 @@
                   "field": "::exampleFieldMtas(fieldName)::",
                   "prefix": "::exampleFieldMtasWordPrefix(prefix)::",
                   "type": "all",
+                  "regexp": "[a-zA-Z]{5,}",
                   "functions": [{
                     "key": "basic",
                     "expression": "$q0",
