fix examples and static screens mapping test

--- a/src/layout/examples/06_f_07.mtas_facet.html
+++ b/src/layout/examples/06_f_07.mtas_facet.html
@@ -96,7 +96,8 @@
                     "value": "[::exampleFieldMtasEscapedPosValue2(prefix=\"value\")::]"
                   }],
                   "base" :[{
-                    "field": "::exampleFieldText(fieldName1)::","number": 10
+                    "field": "::exampleFieldString(fieldName1)::",
+                    "number": 10
                   },{
                     "field": "::exampleFieldInteger(fieldName2)::", 
                     "number": 2,
@@ -109,7 +110,7 @@
       </td>
       <td class="text">Get facet for 
       CQL query <em>[::exampleFieldMtasPosValue2(prefix="value")::]</em> in <em>::exampleFieldMtas(fieldName)::</em>
-      over field <em>::exampleFieldText(fieldName1)::</em> and <em>::exampleFieldInteger(fieldName2)::</em>.
+      over field <em>::exampleFieldString(fieldName1)::</em> and <em>::exampleFieldInteger(fieldName2)::</em>.
       </td>
     </tr>
   </table>
