--- a/src/layout/examples/06_f_06.mtas_termvector.html
+++ b/src/layout/examples/06_f_06.mtas_termvector.html
@@ -197,16 +197,13 @@
                   "key": "frequency list ::exampleFieldMtasWordPrefix(prefix)::",
                   "field": "::exampleFieldMtas(fieldName)::",
                   "prefix": "::exampleFieldMtasWordPrefix(prefix)::",
-                  "type": "all",
                   "regexp": "[a-zA-Z]{5,}",
                   "functions": [{
                     "key": "basic",
-                    "expression": "$q0",
-                    "type": "all"
+                    "expression": "$q0"
                   },{
                     "key": "relative",
-                    "expression": "$q0/$n",
-                    "type": "all"
+                    "expression": "$q0/$n"
                   }] 
                 }]
               }
