--- a/src/layout/examples/06_f_07.mtas_facet.html
+++ b/src/layout/examples/06_f_07.mtas_facet.html
@@ -97,7 +97,8 @@
                   }],
                   "base" :[{
                     "field": "::exampleFieldString(fieldName1)::",
-                    "number": 10
+                    "number": 10,
+                    "minimum": 1,
                   },{
                     "field": "::exampleFieldInteger(fieldName2)::", 
                     "number": 2,
