--- a/src/layout/style.css
+++ b/src/layout/style.css
@@ -530,6 +530,27 @@ div#content div.info button {
 div#content div.info input.text {
 	min-width: 80%;
 }
+div#content div.mapping div.navigation {
+  height: 30px;
+}
+div#content div.mapping div.navigation button {
+  border-color: #000080;
+  background-color: #000080;
+  color: #FFFFFF;
+}
+div#content div.mapping div.navigationInfo {
+  margin: auto;
+  width: 200px;
+  text-align: center;
+  overflow: none;
+  height: 30px;
+}
+div#content div.mapping div.navigationLeft {
+  float: left;
+}
+div#content div.mapping div.navigationRight {
+	float: right;
+}
 
 div#content div.mapping div.tabs {
 	border-style: none none none solid;
@@ -554,6 +575,18 @@ div#content div.mapping div.tabs div.selected,
 div#content div.mapping div.tabs div:hover {
 	color: #000000;
 }	
+
+div#content div.mapping div.mappingresult {
+	padding: 10px;
+  margin-top: 10px;
+  border-style: solid;
+  border-color: #555555;
+  border-width: 1px;
+}
+
+div#content div.mapping div.mappingresult table tr:hover {
+	background: #F5F5F5;
+}
 
 div#content div.mapping div.mappingcontent {
 	border-style: solid;
@@ -584,6 +617,17 @@ div#content div.mapping div.right {
   margin: 10px;
   padding: 4px 10px 0 10px;
 	float: right;
+	overflow: auto;
+}
+
+div#content div.mapping div.link {
+	color: #0000FF;
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+div#content div.mapping div.selected {
+	font-weight: bold;
 }
 	
 div#content div.mapping div.mappingblock input,
@@ -613,10 +657,15 @@ div#content div.mapping div.textarea textarea {
 }
 div#content div.mapping div.buttons {
 	margin: 2px 10px 10px 10px;	
+	clear: both;
 }
 div#content div.mapping div.buttons button.send {
 	border-color: #000080;
   background-color: #000080;
   color: #FFFFFF;
   margin-left: 5px;
+}
+div#content div.mapping div.buttons button.send:disabled {
+  color: #FF0000;
+  cursor: not-allowed;
 }
