support distance termvector

--- a/src/layout/examples/06_e.stats.html
+++ b/src/layout/examples/06_e.stats.html
@@ -25,6 +25,7 @@
 <div class="code">
   <pre>{
   <span class="obligatory">"field" : &lt;fielditem&gt; / &lt;fieldfunction&gt;</span>,
+  <span class="optional">"countDistinct" : &lt;boolean&gt;</span>,
   <span class="optional">"tag" : &lt;string&gt;</span>,
   <span class="optional">"key" : &lt;string&gt;</span>,
   <span class="optional">"ex" : &lt;string&gt;</span>,  
