--- a/src/layout/examples/03.condition.html
+++ b/src/layout/examples/03.condition.html
@@ -705,6 +705,8 @@ since this is automatically derived from the CQL query with the different instan
 }</pre>
 </div>
 
+<div class="text">Although <em>condition</em> and <em>filter</em> are marked as optional, usually at least one of them should be provided!</div>
+
 <div class="example">
   <table>
     <tr>
