include mtas version

--- a/src/layout/examples/06_f.mtas.html
+++ b/src/layout/examples/06_f.mtas.html
@@ -17,5 +17,6 @@
   <span class="optional">"group" : &lt;<a data-tab="mtas group">mtas group</a>&gt;</span>,
   <span class="optional">"prefix" : &lt;<a data-tab="mtas prefix">mtas prefix</a>&gt;</span>,
   <span class="optional">"collection" : &lt;<a data-tab="mtas collection">mtas collection</a>&gt;</span>,
+  <span class="optional">"version" : &lt;<a data-tab="mtas version">mtas version</a>&gt;</span>,
 }</pre>
 </div>
