view settings and processes

--- a/src/layout/style.css
+++ b/src/layout/style.css
@@ -432,7 +432,7 @@ div#content div.examples div.content div.details table.table td.right {
 	text-align: right;
 }
 
-div#content div.examples div.content div.details div.important {
+div#content div.important {
 	margin: 10px;
 	padding: 10px;
 	border: solid 1px #000000;
