add version and timeAllowed

--- a/src/layout/examples/01.introduction.html
+++ b/src/layout/examples/01.introduction.html
@@ -10,6 +10,7 @@
   <span class="obligatory">"response" : &lt;response&gt;,</span>        
   <span class="optional">"sort" : [ &lt;sortitem&gt;, &lt;sortitem&gt;,... ],</span>
   <span class="optional">"debug" : &lt;string&gt;,</span>
+  <span class="optional">"timeAllowed" : &lt;integer&gt;,</span>
   <span class="optional">"cache" : &lt;boolean&gt;,</span>
 }</pre>
 </div>
@@ -18,7 +19,7 @@
   Here only <a data-tab="response">response</a> is obligatory, 
   <a data-tab="configuration">configuration</a>, <a data-tab="filter">filter</a>, 
   <a data-tab="condition">condition</a>, <a data-tab="sort">sort</a>,
-  <em>debug</em> and <em>cache</em>
+  <em>debug</em>, <em>timeAllowed</em> and <em>cache</em>
   are optional.
 </div>
 
