--- a/src/layout/examples/06_b.facets.html
+++ b/src/layout/examples/06_b.facets.html
@@ -466,11 +466,13 @@
   <span class="obligatory">"start" : &lt;string&gt; / &lt;integer&gt;,</span>
   <span class="obligatory">"end" : &lt;string&gt; / &lt;integer&gt;,</span>
   <span class="obligatory">"gap" : &lt;string&gt; / &lt;integer&gt;,</span>
-  <span class="optional">"other" : &lt;string&gt;,</span>
+  <span class="optional">"other" : "before" / "after" / "between" / "none" / "all",</span>
   <span class="optional">"include" : &lt;string&gt;,</span>
   <span class="optional">"key" : &lt;string&gt;,</span>
   <span class="optional">"tag" : &lt;string&gt;,</span>
   <span class="optional">"ex" : &lt;string&gt;,</span>
+  <span class="optional">"other" : &lt;string&gt;,</span>
+  <span class="optional">"mincount" : &lt;integer&gt;,</span>
 }</pre>
 </div>
 
