include ex for heatmap facet

--- a/src/layout/examples/06_b.facets.html
+++ b/src/layout/examples/06_b.facets.html
@@ -669,6 +669,7 @@
   <span class="optional">"distErrPct" : &lt;numeric&gt;,</span>
   <span class="optional">"distErr" : &lt;numeric&gt;,</span>
   <span class="optional">"format" : &lt;string&gt;,</span>
+  <span class="optional">"ex" : &lt;string&gt;,</span>
 }</pre>
 </div>
 
