--- a/src/layout/examples/06_f.mtas.html
+++ b/src/layout/examples/06_f.mtas.html
@@ -12,6 +12,7 @@
   <span class="optional">"document" : &lt;<a data-tab="mtas document">mtas document</a>&gt;</span>,
   <span class="optional">"kwic" : &lt;<a data-tab="mtas kwic">mtas kwic</a>&gt;</span>,
   <span class="optional">"list" : &lt;<a data-tab="mtas list">mtas list</a>&gt;</span>,
+  <span class="optional">"page" : &lt;<a data-tab="mtas page">mtas page</a>&gt;</span>,
   <span class="optional">"termvector" : &lt;<a data-tab="mtas termvector">mtas termvector</a>&gt;</span>,
   <span class="optional">"facet" : &lt;<a data-tab="mtas facet">mtas facet</a>&gt;</span>,
   <span class="optional">"group" : &lt;<a data-tab="mtas group">mtas group</a>&gt;</span>,
